<resources>
    <string name="app_name">Cinephile</string>
    <string name="search_hint">Search movies</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Authentication failed</string>
    <string-array name="navigation_drawer_items_array">
        <item name="drawer_item_popular">Popular</item>
        <item name="drawer_item_favourites">Favorites</item>
        <item name="drawer_item_about">About</item>
        <item name="drawer_item_logout">Logout</item>
    </string-array>
    <string name="title_activity_favorite_movies">Favorite Movies</string>
    <string name="title_activity_popular_movies">Popular Movies</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="title_activity_person_details">Person Details</string>
    <string name="title_activity_sign_in">Sign in or Register</string>
    <string name="not_logged_in">You need to login to see your favorites&#8230;</string>
    <string name="action_skip_sign_in">Skip sign in</string>
    <string name="description">Description</string>
    <string name="biography">Biography</string>
    <string name="facebook_app_id">515344965466115</string>
    <string name="fb_login_protocol_scheme">fb515344965466115</string>
    <!--<string name="default_web_client_id">807156032184-gdu9job55l57m07htsv1th5q02d5pobu.apps.googleusercontent.com</string>-->
</resources>
